# warehouse

./: .env.example  README.md  docker-compose.yml  initial_setup.sh  pyproject.toml  requirements.txt  run_tests.sh
alembic/: env.py
alembic/versions/: 0d42a5a0f12b_update_order_created_at_to_use_timezone_.py  3b4bab72771d_initial_migration.py
app/: main.py
app/api/v1/endpoints/: order.py  product.py
app/core/: config.py
app/db/: session.py
app/db/models/: order.py  order_item.py  product.py
app/schemas/: order.py  order_item.py  product.py
tests/: conftest.py  test_order.py  test_product.py
tests/fixtures/: __init__.py  order_fixtures.py  product_fixtures.py
