[tool.poetry]
name = "warehouse-api"
version = "0.1.0"
description = "API для управления складом"
authors = ["Grigoriy Kruchinin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
